crates/jolt_java_syntax/tests/snapshots/corpus__style__declarations__modifiers_and_annotations.snap
---
source: crates/jolt_java_syntax/tests/corpus.rs
expression: snapshot
---
input:
@Complex(/* args */ name="demo", // name
flags={1,2}) @Generated("tool") @Deprecated final public class User { @FieldAnno(name="id", values={1,2}) private final String id; @FieldOnly String unqualified; public @Nonnull String name(){ return id; } @Action @Checked public @Nullable void reset(){} @Override String raw(){ return id; } }
strictfp sealed public class Base permits Open {}
strictfp non-sealed public class Open extends Base {}
non-sealed @Deprecated class AnnotatedOpen extends Base {}
final /* stable */ public class CommentedModifier { volatile /* shared */ public int value; }

syntax:
syntax:
CompilationUnit
  CompilationUnitItemList
    ClassDeclaration
      ModifierList
        Annotation
          At "@" @ 0..1
          Name
            Identifier "Complex" @ 1..8
          AnnotationArgumentList
            LParen "(" @ 8..9 trailing=[BlockComment "/* args */", Whitespace " "]
            AnnotationElementList
              AnnotationElementArgumentList
                AnnotationElementValuePair
                  Identifier "name" @ 20..24
                  Assign "=" @ 24..25
                  AnnotationElementValue
                    LiteralExpression
                      StringLiteral "\"demo\"" @ 25..31
                Comma "," @ 31..32 trailing=[Whitespace " ", LineComment "// name"]
                AnnotationElementValuePair
                  Identifier "flags" @ 41..46 leading=[Newline "\n"]
                  Assign "=" @ 46..47
                  AnnotationElementValue
                    AnnotationArrayInitializer
                      LBrace "{" @ 47..48
                      AnnotationElementValueList
                        AnnotationElementValue
                          LiteralExpression
                            IntegerLiteral "1" @ 48..49
                        Comma "," @ 49..50
                        AnnotationElementValue
                          LiteralExpression
                            IntegerLiteral "2" @ 50..51
                      RBrace "}" @ 51..52
            RParen ")" @ 52..53 trailing=[Whitespace " "]
        Annotation
          At "@" @ 54..55
          Name
            Identifier "Generated" @ 55..64
          AnnotationArgumentList
            LParen "(" @ 64..65
            AnnotationElementList
              AnnotationElementArgumentList
                AnnotationElementValue
                  LiteralExpression
                    StringLiteral "\"tool\"" @ 65..71
            RParen ")" @ 71..72 trailing=[Whitespace " "]
        Annotation
          At "@" @ 73..74
          Name
            Identifier "Deprecated" @ 74..84 trailing=[Whitespace " "]
        FinalKw "final" @ 85..90 trailing=[Whitespace " "]
        PublicKw "public" @ 91..97 trailing=[Whitespace " "]
      ClassKw "class" @ 98..103 trailing=[Whitespace " "]
      Identifier "User" @ 104..108 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 109..110 trailing=[Whitespace " "]
        ClassBodyMemberList
          FieldDeclaration
            ModifierList
              Annotation
                At "@" @ 111..112
                Name
                  Identifier "FieldAnno" @ 112..121
                AnnotationArgumentList
                  LParen "(" @ 121..122
                  AnnotationElementList
                    AnnotationElementArgumentList
                      AnnotationElementValuePair
                        Identifier "name" @ 122..126
                        Assign "=" @ 126..127
                        AnnotationElementValue
                          LiteralExpression
                            StringLiteral "\"id\"" @ 127..131
                      Comma "," @ 131..132 trailing=[Whitespace " "]
                      AnnotationElementValuePair
                        Identifier "values" @ 133..139
                        Assign "=" @ 139..140
                        AnnotationElementValue
                          AnnotationArrayInitializer
                            LBrace "{" @ 140..141
                            AnnotationElementValueList
                              AnnotationElementValue
                                LiteralExpression
                                  IntegerLiteral "1" @ 141..142
                              Comma "," @ 142..143
                              AnnotationElementValue
                                LiteralExpression
                                  IntegerLiteral "2" @ 143..144
                            RBrace "}" @ 144..145
                  RParen ")" @ 145..146 trailing=[Whitespace " "]
              PrivateKw "private" @ 147..154 trailing=[Whitespace " "]
              FinalKw "final" @ 155..160 trailing=[Whitespace " "]
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "String" @ 161..167 trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "id" @ 168..170
            Semicolon ";" @ 170..171 trailing=[Whitespace " "]
          FieldDeclaration
            ModifierList
              Annotation
                At "@" @ 172..173
                Name
                  Identifier "FieldOnly" @ 173..182 trailing=[Whitespace " "]
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "String" @ 183..189 trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "unqualified" @ 190..201
            Semicolon ";" @ 201..202 trailing=[Whitespace " "]
          MethodDeclaration
            ModifierList
              PublicKw "public" @ 203..209 trailing=[Whitespace " "]
              Annotation
                At "@" @ 210..211
                Name
                  Identifier "Nonnull" @ 211..218 trailing=[Whitespace " "]
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "String" @ 219..225 trailing=[Whitespace " "]
            Identifier "name" @ 226..230
            LParen "(" @ 230..231
            RParen ")" @ 231..232
            Block
              LBrace "{" @ 232..233 trailing=[Whitespace " "]
              BlockStatementList
                BlockStatement
                  ReturnStatement
                    ReturnKw "return" @ 234..240 trailing=[Whitespace " "]
                    NameExpression
                      Identifier "id" @ 241..243
                    Semicolon ";" @ 243..244 trailing=[Whitespace " "]
              RBrace "}" @ 245..246 trailing=[Whitespace " "]
          MethodDeclaration
            ModifierList
              Annotation
                At "@" @ 247..248
                Name
                  Identifier "Action" @ 248..254 trailing=[Whitespace " "]
              Annotation
                At "@" @ 255..256
                Name
                  Identifier "Checked" @ 256..263 trailing=[Whitespace " "]
              PublicKw "public" @ 264..270 trailing=[Whitespace " "]
              Annotation
                At "@" @ 271..272
                Name
                  Identifier "Nullable" @ 272..280 trailing=[Whitespace " "]
            VoidType
              VoidKw "void" @ 281..285 trailing=[Whitespace " "]
            Identifier "reset" @ 286..291
            LParen "(" @ 291..292
            RParen ")" @ 292..293
            Block
              LBrace "{" @ 293..294
              BlockStatementList
              RBrace "}" @ 294..295 trailing=[Whitespace " "]
          MethodDeclaration
            ModifierList
              Annotation
                At "@" @ 296..297
                Name
                  Identifier "Override" @ 297..305 trailing=[Whitespace " "]
            ClassType
              ClassTypeSegmentList
                ClassTypeSegmentNode
                  AnnotationList
                  Name
                    Identifier "String" @ 306..312 trailing=[Whitespace " "]
            Identifier "raw" @ 313..316
            LParen "(" @ 316..317
            RParen ")" @ 317..318
            Block
              LBrace "{" @ 318..319 trailing=[Whitespace " "]
              BlockStatementList
                BlockStatement
                  ReturnStatement
                    ReturnKw "return" @ 320..326 trailing=[Whitespace " "]
                    NameExpression
                      Identifier "id" @ 327..329
                    Semicolon ";" @ 329..330 trailing=[Whitespace " "]
              RBrace "}" @ 331..332 trailing=[Whitespace " "]
        RBrace "}" @ 333..334
    ClassDeclaration
      ModifierList
        StrictfpKw "strictfp" @ 335..343 leading=[Newline "\n"] trailing=[Whitespace " "]
        Identifier "sealed" @ 344..350 trailing=[Whitespace " "]
        PublicKw "public" @ 351..357 trailing=[Whitespace " "]
      ClassKw "class" @ 358..363 trailing=[Whitespace " "]
      Identifier "Base" @ 364..368 trailing=[Whitespace " "]
      PermitsClause
        Identifier "permits" @ 369..376 trailing=[Whitespace " "]
        NameList
          Name
            Identifier "Open" @ 377..381 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 382..383
        ClassBodyMemberList
        RBrace "}" @ 383..384
    ClassDeclaration
      ModifierList
        StrictfpKw "strictfp" @ 385..393 leading=[Newline "\n"] trailing=[Whitespace " "]
        NonSealedModifier
          Identifier "non" @ 394..397
          Minus "-" @ 397..398
          Identifier "sealed" @ 398..404 trailing=[Whitespace " "]
        PublicKw "public" @ 405..411 trailing=[Whitespace " "]
      ClassKw "class" @ 412..417 trailing=[Whitespace " "]
      Identifier "Open" @ 418..422 trailing=[Whitespace " "]
      ExtendsClause
        ExtendsKw "extends" @ 423..430 trailing=[Whitespace " "]
        TypeList
          ClassType
            ClassTypeSegmentList
              ClassTypeSegmentNode
                AnnotationList
                Name
                  Identifier "Base" @ 431..435 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 436..437
        ClassBodyMemberList
        RBrace "}" @ 437..438
    ClassDeclaration
      ModifierList
        NonSealedModifier
          Identifier "non" @ 439..442 leading=[Newline "\n"]
          Minus "-" @ 442..443
          Identifier "sealed" @ 443..449 trailing=[Whitespace " "]
        Annotation
          At "@" @ 450..451
          Name
            Identifier "Deprecated" @ 451..461 trailing=[Whitespace " "]
      ClassKw "class" @ 462..467 trailing=[Whitespace " "]
      Identifier "AnnotatedOpen" @ 468..481 trailing=[Whitespace " "]
      ExtendsClause
        ExtendsKw "extends" @ 482..489 trailing=[Whitespace " "]
        TypeList
          ClassType
            ClassTypeSegmentList
              ClassTypeSegmentNode
                AnnotationList
                Name
                  Identifier "Base" @ 490..494 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 495..496
        ClassBodyMemberList
        RBrace "}" @ 496..497
    ClassDeclaration
      ModifierList
        FinalKw "final" @ 498..503 leading=[Newline "\n"] trailing=[Whitespace " ", BlockComment "/* stable */", Whitespace " "]
        PublicKw "public" @ 517..523 trailing=[Whitespace " "]
      ClassKw "class" @ 524..529 trailing=[Whitespace " "]
      Identifier "CommentedModifier" @ 530..547 trailing=[Whitespace " "]
      ClassBody
        LBrace "{" @ 548..549 trailing=[Whitespace " "]
        ClassBodyMemberList
          FieldDeclaration
            ModifierList
              VolatileKw "volatile" @ 550..558 trailing=[Whitespace " ", BlockComment "/* shared */", Whitespace " "]
              PublicKw "public" @ 572..578 trailing=[Whitespace " "]
            PrimitiveType
              AnnotationList
              IntKw "int" @ 579..582 trailing=[Whitespace " "]
            VariableDeclaratorList
              VariableDeclarator
                Identifier "value" @ 583..588
            Semicolon ";" @ 588..589 trailing=[Whitespace " "]
        RBrace "}" @ 590..591
  Eof "" @ 592..592 leading=[Newline "\n"]

diagnostics:
  (none)

diagnostics:
(none)
